# WaterQuality

blink/: sdkconfig  sdkconfig.old
esp_ie/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp_ie/components/ssd1306/: CMakeLists.txt
esp_ie/main/: CMakeLists.txt  http_send.c  http_send.h  main.c  wifi_connect.c  wifi_connect.h
stm_src/MONITOR/: .cproject  .project  MONITOR Debug.launch
stm_src/MONITOR/Debug/: MONITOR.elf  MONITOR.list  MONITOR.map  makefile  objects.list  sources.mk
stm_src/MONITOR/Debug/Inc/driver/Adc/: adc.cyclo  adc.d  adc.su  subdir.mk
stm_src/MONITOR/Debug/Inc/driver/SysTick/: subdir.mk  systick.cyclo  systick.d  systick.su
stm_src/MONITOR/Debug/Inc/driver/Uart/: subdir.mk  uart.cyclo  uart.d  uart.su  usart3.d
stm_src/MONITOR/Debug/Inc/sensor/: sensor.cyclo  sensor.d  sensor.su  subdir.mk
stm_src/MONITOR/Debug/Src/: main.cyclo  main.d  main.su  subdir.mk
stm_src/MONITOR/Inc/driver/Adc/: adc.c  adc.h
stm_src/MONITOR/Inc/driver/SysTick/: systick.c  systick.h
stm_src/MONITOR/Inc/driver/Uart/: uart.c
stm_src/MONITOR/Inc/sensor/: sensor.c  sensor.h
stm_src/MONITOR/Src/: main.c
web/: dashboard.html  index.html  predict.html
web/api/: db_config.php  get_data.php  get_predict.php  receive.php
